name:                bottom-hs
version:             0.1.0.0
-- synopsis: a haskell implementation of the bottom encoding format
-- description: see synopsis
homepage:            https://github.com/to-json/bottom-hs#readme
license:             BSD3
license-file:        LICENSE
author:              me
maintainer:          this will not likely be maintained
copyright:           2021 Jae Saxon
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable bottom
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,text

library lib-bottom
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                      ,text
  exposed-modules:     Bottom
